# astro-virtual-assistant

./: .dockerignore  .env.template  .gitignore  .snyk  Jenkinsfile  Makefile  Pipfile  README.md  actions-requirements.txt  app.py  build_deploy.sh  config.yml  credentials.yml  docker-compose.yml  domain.yml  endpoints.yml  graph.html  logging-config.yml  openapi.json  pr_check.sh  pyproject.toml  pytest.ini  requirement-override-api.txt  requirements.txt  run_actions.py  run_connector_api.py  run_internal.py  run_internal_watson_extension.py  story_graph.dot
.github/: dependabot.yml
.rhcicd/: build_deploy.sh
.tekton/: virtual-assistant-actions-pull-request.yaml  virtual-assistant-actions-push.yaml  virtual-assistant-api-pull-request.yaml  virtual-assistant-api-push.yaml  virtual-assistant-api-v2-pull-request.yaml  virtual-assistant-api-v2-push.yaml  virtual-assistant-internal-pull-request.yaml  virtual-assistant-internal-push.yaml  virtual-assistant-watson-extension-pull-request.yaml  virtual-assistant-watson-extension-push.yaml
actions/: actions.py  actions_advisor.py  actions_openshift.py  actions_vulnerability.py  auth.py  closing_actions.py  core_actions.py  current_url.py  default_actions.py  feedback.py  feedback_actions.py  forms.py  general.py  identity.py  metadata_actions.py  product_descriptions_actions.py  services_offline.py  slot_match.py  status.py  user_preferences_action.py  utils.py
channels/: console.py  identity.py
common/: __init__.py  auth.py  config.py  header.py  identity.py  links.py  logging.py  metrics.py  requests.py  utils.py
(+397 files in other folders)
